translated hiv info to kg

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -1136,7 +1136,43 @@
   "presence_of_hiv_6text22":"анда дарылар ВИЧке таасирин тийгизе албай калат. ",
   "presence_of_hiv_6text23":"Мындай учурда дарыгер башка дарыларды дайындайт, ал эми дарылардын саны көбөйөт. \n",
   "presence_of_hiv_6text24":"\nВИЧ-инфекциясын дарылоо үчүн дарылар (АРВД) акысыз берилет! \n",
-  "presence_of_hiv_6text25":"\nВИЧ-инфекциясын дарылоо адамдын ден соолугун жана өмүрүн сактап калат!"
+  "presence_of_hiv_6text25":"\nВИЧ-инфекциясын дарылоо адамдын ден соолугун жана өмүрүн сактап калат!",
 
+  "hiv_info3text1": "ВИЧ кандай жолдор менен жукпайт?\n\n",
+  "hiv_info3text2": "Кооптуу болбогон нерседен жөн эле корко бербеш үчүн ВИЧ кайсы жолдор менен жукпай турганын билип алганыбыз маанилүү. Бул бизге коркунучтуу болгон жерде тобокелдикти азайтып; өзүбүздү коргоп калуу үчүн керек. Унутпаңыз, ВИЧ үч гана жол менен жугат (бул бөлүмдү караңыз). ВИЧ менен жашаган адамдардан коркпоңуз – алар сизге эч кандай коркунуч туудурбайт.",
+  "hiv_info3text3": "Кучакташканда, кол алышканда, өбүшкөндө ",
+  "hiv_info3text4": "Жөтөлгөндө жана чүчкүргөндө ",
+  "hiv_info3text5": "Тамак-аш даярдаганда жана аны чогуу ичкенде\n\n",
+  "hiv_info3text6": "Идиш-аякты, сүлгүнү жана шейшепти бирге колдонгондо.Баарлашып отурганда, китепти жана тиричилик буюмдарын биргелешип пайдаланганда жукпайт.",
+  "hiv_info3text7": "Даараткананы, душту, ваннаны чогуу колдонгондо\n\n",
+  "hiv_info3text8": "Бассейнде сүзгөндө, спорт менен машыкканда жукпайт.",
+  "hiv_info3text9": "Курт-кумурскалар (чиркейлер, аарылар) чакканда\n\n",
+  "hiv_info3text10": "жаныбарлар тиштегенде вирус жукпайт ",
+  "hiv_info3text11": "ВИЧ менен жашаган адам күнүмдүк жашоодо коркунуч жаратпайт. Сиз аны менен эркин баарлашып, бир бөлмөдө жашап, бир класста, бир группада чогуу окуй аласыз;  бир столго отуруп; клубдарга, кафелерге, дискотекаларга барып, чогуу эс алсаңыз болот.",
 
+  "hiv_info2text1":"Вирус адамдын организмине кантип кирет?\n\n",
+  "hiv_info2text2":"Биз менен байланышта болгонуңуз үчүн ыраазычылык билдиребиз. Бул бөлүмдө ВИЧти жуктуруп алуу тобокелдигин аныктоого жана андан сактанууга жардам берген маанилүү маалыматты таба аласыз.\n",
+  "hiv_info2text3":"ВИЧ",
+  "hiv_info2text4":"— адамдын иммундук жетишсиздигинин вирусу. Бул демек, ушул вирус менен адам гана ооруйт жана ал адамдан адамга жугат.\n",
+  "hiv_info2text5":"ВИЧ үч жол менен жугат:",
+  "hiv_info2text6":"Жыныстык жол менен",
+  "hiv_info2text7":"Ийне аркылуу",
+  "hiv_info2text8":"ВИЧ-позитивдүү энеден балага кош бойлуулук маалында, төрөт учурунда жана баланы эмизгенде.",
+  "hiv_info2text9":"Жыныстык жол менен:",
+  "hiv_info2text10":"ВИЧ жыныстык катнаштын бардык түрлөрү аркылуу жугат.Аналдык жыныстык катнаштар; жыныстык өнөктөштөрдү тез-тез алмаштыруу; кокустан боло калган жыныстык байланыш; зордук-зомбулук менен коштолгон жана топтук жыныстык катнаш өзгөчө кооптуу. Жыныстык жол менен жугуучу оорулар (сифилис, гонорея ж.б.). ВИЧ-инфекциясынын жуктуруп алуу тобокелдигин көбөйтөт. ",
+  "hiv_info2text11":"ВИЧти жуктуруп алуу тобокелдигин төмөнкүлөр азайтат:",
+  "hiv_info2text12":"Жыныстык катнаштан кармануу; вирусту жуктурбаган бир өнөктөш менен гана болуу; презервативдерди жана суунун негизинде жасалган атайын майлоочу материалдарды (лубриканттарды) колдонуу.",
+  "hiv_info2text13":"ВИЧ ийне аркылуу төмөнкүдөй жолдор менен жугушу мүмкүн:",
+  "hiv_info2text14":"баңгизатты ийне аркылуу башкалар менен чогуу колдонгондо; кокус адамдардан медициналык кызмат көрсөтүүлөрдү алып жатканда (кан куюу; хирургиялык операциялар; инъекциялар маалында; табибдерде теринин үстүнкү катмарын бузуу менен коштолгон дарылануу маалында – кесиктер; кан чыгаруу; сүннөткө отургузуу); стерилденбеген аспап менен татуировка, пирсинг жасаганда, ийнелерди сайып дарылаганда. ",
+  "hiv_info2text15":" Вирусту жуктуруу тобокелдигин азайтат",
+  "hiv_info2text16":"Баңгизатын колдонуудан баш тартуу, баңгизатты даярдоо үчүн башка бирөөнүн ийнесин жана идишин колдонбоо; медициналык кызмат көрсөтүүлөрдү медициналык мекемелерден гана алуу; тату, пирсинг жасатканда жана медициналык мекемелерден башка жерлерде ар кандай процедураларды жасатканда стерилдүү аспаптарды колдонуу",
+  "hiv_info2text17":"ВИЧ-позитивдүү энеден балага жугат. ",
+  "hiv_info2text18":"ВИЧ-инфекциясын эрте аныктап, дарылана баштоо балага ВИЧ-инфекциянын жуктуруп алуу коркунучун азайтат. \n\Бейөкмөт уюмдардын консультантынан же  медициналык борбордон тобокелдиктерди баалоо жана азайтуу боюнча кеңеш алууну сунуш кылабыз. \n\n Вирусту жуктуруп алуу тобокелдигин өз алдынча да аныктай аласыз. Бул үчүн төмөнкү бир нече суроолорго жооп бериңиз. Эгерде сиз жок дегенде бир суроого “ооба” деп жооп берсеңиз, анда консультация алып, ВИЧке тест тапшырып, андан соң өз коопсуздугуңуз үчүн чараларды көрүшүңүз керек: ",
+  "hiv_info2text19":"Жыныстык мамиледе болдуңуз беле?",
+  "hiv_info2text20":"Жыныстык катнаш учурунда дайыма презерватив колдончу белеңиз?",
+  "hiv_info2text21":"Бирден көп жыныстык өнөктөшүңүз болгонбу?",
+  "hiv_info2text22":"Сиздин же өнөктөшүңүздүн жыныстык органдарында жаралар болгонбу, жыныстык органдардан адаттан тыш бөлүп чыгууларды байкадыңыз беле, ичиңиздин ылдый жагы ооруган беле, же болбосо жыныстык жол менен жугуучу инфекциялардан (сифилис, гонорея, трихомониаз) дарыландыңыз беле?",
+  "hiv_info2text23":"Сиз жок дегенде бир жолу баңгизатын сайып көрдүңүз беле?",
+  "hiv_info2text24":"Өнөктөшүңүз/өнөктөштөрүңүз менен баңгизатты чогуу колдонгон учурлар болду беле?",
+  "hiv_info2text25":"Сиз гепатит менен оорудуңуз беле?"
 }
