--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -1135,7 +1135,48 @@
   "presence_of_hiv_6text22":"устойчивости вируса",
   "presence_of_hiv_6text23":"– тогда лекарства не будут действовать на ВИЧ. В таком случае назначаются другие лекарства, а количество применяемых таблеток увеличивается. \n",
   "presence_of_hiv_6text24":"\nПрепараты для лечения ВИЧ-инфекции (АРВП) предоставляются бесплатно! \n",
-  "presence_of_hiv_6text25":"\nАнтиретровирусная терапия позволяет людям с ВИЧ прожить полноценную и долгую жизнь!"
+  "presence_of_hiv_6text25":"\nАнтиретровирусная терапия позволяет людям с ВИЧ прожить полноценную и долгую жизнь!",
+
+  "hiv_info3text1": "Как ВИЧ не передается\n\n",
+  "hiv_info3text2": "Для каждого из нас важно знать, как ВИЧ не передается, чтобы перестать бояться того, что не опасно, а снижать риск там, где опасно; уметь обезопасить себя. Помните, что ВИЧ передается только тремя путями (посмотрите этот раздел). Не бойтесь людей, живущих с ВИЧ – они для Вас не несут никакой угрозы. Угроза в нашем незнании и неумении защитить себя.\n",
+  "hiv_info3text3": "При объятии, рукопожатии, поцелуе\n\n",
+  "hiv_info3text4": "При кашле и чихании",
+  "hiv_info3text5": "При приготовлении и принятии пищи\n\n",
+  "hiv_info3text6": "При пользовании общей посудой, столовыми приборами, полотенцами и постельным бельем. При общении пользовании книгами,  бытовыми приборами.",
+  "hiv_info3text7": "При пользовании туалетом, душем, ванной\n\n",
+  "hiv_info3text8": "При плавании в бассейне, при занятиях спортом.",
+  "hiv_info3text9": "При укусах насекомых (комаров, москитов, пчел)\n\n",
+  "hiv_info3text10": "При общении и укусах животных.",
+  "hiv_info3text11": "Человек, живущий с ВИЧ не опасен в быту. Вы можете общаться, проживать в одной комнате, учиться в одном классе, одной группе. Сидеть за одним столом. Ходить в клубы, в кафе, на дискотеки, вместе отдыхать.",
+
+  "hiv_info2text1":"Как вирус попадает в организм человека\n\n",
+  "hiv_info2text2":"Спасибо, что остаетесь на связи с нами.  В этом разделе содержится важная информация, которая поможет определить собственные риски заражения ВИЧ и как этого можно избежать.\n",
+  "hiv_info2text3":"ВИЧ",
+  "hiv_info2text4":"– это вирус иммунодефицита человека. Это означает, что им болеет только человек и вирус передается от человека к человеку.\n",
+  "hiv_info2text5":"Существует только 3 пути передачи ВИЧ: \n",
+  "hiv_info2text6":"Половой путь",
+  "hiv_info2text7":"Инъекционный",
+  "hiv_info2text8":"От ВИЧ-позитивной матери ребенку во время беременности, родов и при кормлении грудью",
+  "hiv_info2text9":"Половой путь: ",
+  "hiv_info2text10":"ВИЧ передается при всех видах сексуальных контактов. Особенно опасны анальные половые контакты; частая смена половых партнеров; случайные половые контакты; насильственный и групповой секс. Увеличивают риск инфицирования ИППП – инфекции, которые передаются половым путем (сифилис, гонорея и др.). ",
+  "hiv_info2text11":"Снижает риск инфицирования ВИЧ: ",
+  "hiv_info2text12":"Воздержание от половых контактов; верность одному неинфицированному партнеру; использование презервативов и специальных смазок на водной основе (лубрикантов).",
+  "hiv_info2text13":"Инъекционый путь передачи ВИЧ возможен: ",
+  "hiv_info2text14":"при совместном употреблении наркотиков путем инъекций; получении медицинских услуг у случайных лиц (переливание крови; хирургические операции; инъекции; лечение у табибов, сопровождающееся повреждением кожи – насечки; кровопускание; обрезание); при проведении татуировок, пирсинга, иглоукалывания нестерильным инструментом.",
+  "hiv_info2text15":"Снижает риск ",
+  "hiv_info2text16":"отказ от употребления наркотиков, использование индивидуального шприца и посуды для приготовления наркотиков; получение медицинских услуг только в медицинских учреждениях; использование стерильного инструментария при проведении татуировок, пирсинга и других процедур вне организаций здравоохранения.",
+  "hiv_info2text17":"От ВИЧ-позитивной матери – ребенку. ",
+  "hiv_info2text18":"Своевременное выявление \nВИЧ-инфекции и лечение \nВИЧ-инфекции   снижает риск передачи ВИЧ ребенку. \n\nПредлагаем Вам получить консультацию по оценке и снижению риска у консультантов НПО или в медицинском центре. \n\nВы можете сами определить риски инфицирования. Для этого ответьте на следующие несколько вопросов. Если хотя бы по одному вопросу Вы ответили «да», то Вам нужно пройти консультирование и тестирование на ВИЧ, а также предпринять меры по собственной безопасности:",
+  "hiv_info2text19":"Были ли у Вас сексуальные отношения?",
+  "hiv_info2text20":"Всегда ли Вы использовали презерватив при сексуальных контактах?",
+  "hiv_info2text21":"Было ли у Вас более одного полового партнера?",
+  "hiv_info2text22":"Были ли у Вас или Вашего полового партнера язвы на половых органах, необычные выделения из половых органов, боли внизу живота, либо проходили ли Вы лечение инфекций, которые передаются половым путем (сифилис, гонорея, трихомониаз)?",
+  "hiv_info2text23":"Принимали ли вы когда-либо наркотики путем инъекций, хотя бы раз?",
+  "hiv_info2text24":"Принимали ли Вы наркотики совместно с Вашим партнером /партнерами?",
+  "hiv_info2text25":"Болели ли Вы гепатитом?"
+
+
+
 
 }
 
