translated hiv_prevention to kg

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -1167,12 +1167,77 @@
   "hiv_info2text15":" Вирусту жуктуруу тобокелдигин азайтат",
   "hiv_info2text16":"Баңгизатын колдонуудан баш тартуу, баңгизатты даярдоо үчүн башка бирөөнүн ийнесин жана идишин колдонбоо; медициналык кызмат көрсөтүүлөрдү медициналык мекемелерден гана алуу; тату, пирсинг жасатканда жана медициналык мекемелерден башка жерлерде ар кандай процедураларды жасатканда стерилдүү аспаптарды колдонуу",
   "hiv_info2text17":"ВИЧ-позитивдүү энеден балага жугат. ",
-  "hiv_info2text18":"ВИЧ-инфекциясын эрте аныктап, дарылана баштоо балага ВИЧ-инфекциянын жуктуруп алуу коркунучун азайтат. \n\Бейөкмөт уюмдардын консультантынан же  медициналык борбордон тобокелдиктерди баалоо жана азайтуу боюнча кеңеш алууну сунуш кылабыз. \n\n Вирусту жуктуруп алуу тобокелдигин өз алдынча да аныктай аласыз. Бул үчүн төмөнкү бир нече суроолорго жооп бериңиз. Эгерде сиз жок дегенде бир суроого “ооба” деп жооп берсеңиз, анда консультация алып, ВИЧке тест тапшырып, андан соң өз коопсуздугуңуз үчүн чараларды көрүшүңүз керек: ",
+  "hiv_info2text18":"ВИЧ-инфекциясын эрте аныктап, дарылана баштоо балага ВИЧ-инфекциянын жуктуруп алуу коркунучун азайтат. \nБейөкмөт уюмдардын консультантынан же  медициналык борбордон тобокелдиктерди баалоо жана азайтуу боюнча кеңеш алууну сунуш кылабыз. \n\n Вирусту жуктуруп алуу тобокелдигин өз алдынча да аныктай аласыз. Бул үчүн төмөнкү бир нече суроолорго жооп бериңиз. Эгерде сиз жок дегенде бир суроого “ооба” деп жооп берсеңиз, анда консультация алып, ВИЧке тест тапшырып, андан соң өз коопсуздугуңуз үчүн чараларды көрүшүңүз керек: ",
   "hiv_info2text19":"Жыныстык мамиледе болдуңуз беле?",
   "hiv_info2text20":"Жыныстык катнаш учурунда дайыма презерватив колдончу белеңиз?",
   "hiv_info2text21":"Бирден көп жыныстык өнөктөшүңүз болгонбу?",
   "hiv_info2text22":"Сиздин же өнөктөшүңүздүн жыныстык органдарында жаралар болгонбу, жыныстык органдардан адаттан тыш бөлүп чыгууларды байкадыңыз беле, ичиңиздин ылдый жагы ооруган беле, же болбосо жыныстык жол менен жугуучу инфекциялардан (сифилис, гонорея, трихомониаз) дарыландыңыз беле?",
   "hiv_info2text23":"Сиз жок дегенде бир жолу баңгизатын сайып көрдүңүз беле?",
   "hiv_info2text24":"Өнөктөшүңүз/өнөктөштөрүңүз менен баңгизатты чогуу колдонгон учурлар болду беле?",
-  "hiv_info2text25":"Сиз гепатит менен оорудуңуз беле?"
+  "hiv_info2text25":"Сиз гепатит менен оорудуңуз беле?",
+
+  "hiv_prevention1text1": "ВИЧ инфекциясын кантип алдын алуу керек?",
+  "hiv_prevention1text2": "ВИЧ-инфекциясын дарылоого караганда анын алдын алуу оңой. Алдын алуу чараларын сактоо сизди ВИЧти жуктуруп алуудан, вирустук гепатиттерден же жыныстык жол менен жугуучу инфекциялардан (ЖЖЖИ) коргойт. ЖЖЖИни жуктуруп алуу жыныстык жол менен ВИЧке чалдыгуу коркунучун арттырат. \n\nВИЧ үч гана жол менен жуккандыктан, төмөнкү эрежелерди колдонуу менен өзүңүздү инфекциядан коргой аласыз.",
+  "hiv_prevention1text3": "\n ВИЧти жыныстык жол менен жуктуруп алууну болтурбоо төрт В стратегиясына негизделген:",
+  "hiv_prevention1text4": "КИЙИНКИ",
+  "hiv_prevention1text5": "ВИЧ инфекциясын ийне аркылуу жуктуруп алуунун алдын алуу",
+  "hiv_prevention1text6": "ВИЧ-позитивдүү энеден балага ВИЧтин жугушун алдын алуу",
+  "hiv_prevention1text7": "Адам ВИЧке чалдыккан күндө да вирусту башкаларга жуктуруп албоо үчүн профилактикалык чараларды көрүшү керек ",
+  "hiv_prevention1text8": "Бул ВИЧке чалдыккан адамдын өзүн вирустук гепатит, ЖЖЖИ, ошондой эле вирустун башка өзгөргөн түрлөрүн кайрадан жуктуруп алуудан коргойт. ",
+  "hiv_prevention1text9": "ВИЧке чалдыккан адам башка ооруларды жуктуруп алса, бул анын ден соолугуна абдан катуу сокку урат. ",
+  "hiv_prevention1text10":"ВИЧ-инфекциясынын алдын алуу үчүн ошондой эле жыныстык катнашка чейин профилактикалык дарылоодон өтүүгө болот – ал байланышка чейинки профилактика (БЧП) деп аталат, ошондой эле кооптуу \nбайланыштан кийинки профилактика (БКП) деп да аталат.",
+  "hiv_prevention_car1_text1":"Кармануу: Жыныстык катнаштан баш тартуу",
+  "hiv_prevention_car1_text2":"ВИЧ-инфекциясы болбогон бир жыныстык өнөктөш менен гана болуу. Бул кокусунан боло калган жыныстык катнаштан, химсекстен жана башка кооптуу жыныстык жүрүм-турумдан алыс болуу дегенди билдирет. Зомбулук менен коштолгон жыныстык катнаш да ВИЧти жуктуруп алуу тобокелдигин күчөтөт. ",
+  "hiv_prevention_car1_text3":"Жыныстык катнаш учурунда ар дайым презервативди жана суунун негизинде жасалган майлоочу майларды (лубриканттарды) колдонуңуз.",
+  "hiv_prevention_car1_text4":"Жыныстык жол менен жуккан ооруларды аныктап, жыныстык өнөктөш менен чогуу дарылануу ",
+  "hiv_prevention_car2_text1":"Баңгизаттарды колдонуудан баш тартуу ",
+  "hiv_prevention_car2_text2":"Эгер сиз баңгизаттарын колдонсоңуз, тобокелдикти азайтыңыз: \n \nөзүңүздүн гана таза ийнеңизди колдонуңуз; баңгизатын башкалар колдонгон идиштен албаңыз; ийне колдонулбаган жолдоруна өтүңүз же метадон менен терапияны колдогон программага катышыңыз. ",
+  "hiv_prevention_car2_text3":"Медициналык мекемелерден башка жерде туш келди адамдарга медициналык манипуляцияларды жасатпаңыз ",
+  "hiv_prevention_car2_text4":"Теринин ичине кирген процедуралар (ийне саюу; татуировка, пирсинг) маалында тазалоодон өткөрүлгөн жабдуулар колдонулуп жатканына көз салыңыз.",
+  "hiv_prevention_car3_text1":"Кош бойлуулуктун алгачкы айларында же аны пландаштырууда жыныстык өнөктөшүңүз менен ВИЧке тест тапшырыңыз",
+  "hiv_prevention_car3_text2":"Эгерде сизде ВИЧ бар болсо, ВИЧ-инфекциясын дарылоо боюнча (АРТ) көрсөтмөлөрдүн баарын так аткарыңыз, бул вирустун балага жугуусунун алдын алат.",
+  "hiv_prevention_car3_text3":"Жаңы төрөлгөн баланы ВИЧке текшертип, төрөлгөндөн кийин дароо ВИЧке каршы дарылоону баштаңыз.",
+  "hiv_prevention_car3_text4":"Дарыгердин көзөмөлүндө болуп, төрөт жана балаңызды тамактандыруу боюнча көрсөтмөлөрдү так аткарыңыз",
+
+  "hiv_prevention3_car1_text1": "БЧПны дарыгер бейтаптын ден соолугунун абалын, ВИЧ-статусу терс болгонун эске алуу менен дайындайт",
+  "hiv_prevention3_car1_text2": "БЧПны алуу үчүн СПИД борборунда каттоодон өтүп, дарыгердин көзөмөлүндө болуш керек",
+  "hiv_prevention3_car1_text3": "БЧП үчүн дарылар СПИД борборлорунда акысыз берилет",
+  "hiv_prevention3_car1_text4": "Кыргызстанда БЧПны бейөкмөт уюмдардын колдоосу менен алса болот",
+  "hiv_prevention3_car1_text5": "БЧПны алган адам СПИД борборунда үзгүлтүксүз көзөмөлдөн өтүп турууга тийиш ",
+  "hiv_prevention3text1":"ВИЧ-инфекциясынын байланышка чейинки (БЧП) жана байланыштан кийинки профилактикасы ",
+  "hiv_prevention3text2":"Байланышка чейинки профилактика (ДКП)\n\n",
+  "hiv_prevention3text3":"Бул ВИЧ-статусу терс адамдарда ВИЧ инфекциясын алдын алуу үчүн антиретровирустук дарыларды ичүү дегенди билдирет. Эгерде жыныстык өнөктөшүңүз ВИЧке чалдыкса, дарыларды ичпесе же анда-санда ичсе, анда сизге БЧП сунушталат. Байланышка чейинки профилактика кооптуу жыныстык катнашта болгон адамдарга да сунушталат. ",
+  "hiv_prevention3text4":"\n\nБайланышка чейинки профилактика боюнча сунуштар: \n\n",
+  "hiv_prevention3text5":"БЧП жөнүндө толук маалыматты СПИД борборунан же бейөкмөт уюмдардан алыш керек. БЧПны  алуунун эки жолу бар. \n\n",
+  "hiv_prevention3text6":"БЧПны вирусту жуктуруп алуу ",
+  "hiv_prevention3text7":"тобокелдиги болгон мезгилдин соңуна чейин күн сайын (туруктуу), эч үзгүлтүккө учуратпай ичип туруш керек. Эрежелерди так сактасаңыз анын натыйжасы БЧПны баштагандан кийин 4-7 күндүн ичинде байкалат.\n\n",
+  "hiv_prevention3text8":"Эгерде кооптуу жыныстык байланыштар сейрек болсо ,",
+  "hiv_prevention3text9":" кырдаалга жараша БЧПны алуу сунушталат ",
+  "hiv_prevention3text10":"дарыларды байланышка чейин 3 күндүн ичинде жана байланыштан кийин 3 күндүн ичинде ичиш керек. Мындай эрежени кооптуу жыныстык катнаш сейрек болгон учурларда сакташ керек.",
+  "hiv_prevention3text11":"Эске алчу жагдайлар:",
+  "hiv_prevention3text12":"КИЙИНКИ",
+  "hiv_prevention3text13":"Байланыштан кийинки профилактика (БКП ",
+  "hiv_prevention3text14":" – бул ВИЧ-инфекциясы жугушу мүмкүн болгон байланыштан кийин (жыныстык катнаш, баңгизатын бир ийне менен колдонгондо же башка учурларда) вирустун жугушун болтурбоо үчүн антиретровирустук дарыларды ичүү дегенди билдирет. Тобокелдиктерге баа берип, адам ВИЧке тест тапшыргандан кийин БКП дайындалат. БКПны СПИД борборунда, тез жардам станциясында же башка саламаттык сактоо уюмдарында дайындашы мүмкүн.",
+  "hiv_prevention3text15":"МУНУ УНУТПАШ КЕРЕК:\n",
+  "hiv_prevention3text16":"\nБКПны кооптуу байланыштан кийин мүмкүн болушунча тезирээк, бирок 72 сааттан кечиктирбестен (3 күндүн ичинде) башташ керек. БКПны дарыгер дайындайт. Аларды бир ай бою күн сайын дарыгердин көрсөтмөсү боюнча ичип туруш керек. Андан кийин адам 6 ай бою дарыгердин көзөмөлүндө болот (ВИЧке 1, 3 жана 6 айда текшерилип турат). Ошондой эле БЧП жана БКП кош бойлуулуктан жана жугуштуу оорулардан сактабай турганын эсиңизден чыгарбаңыз. Ошондуктан, коргонуу каражаттарын (презервативдерди, лубриканттарды) жана контрацептивдерди колдонуш керек.",
+  "hiv_prevention3text17":"Толук маалыматты СПИД борборлорунан же бейөкмөт уюмдардан алса болот. Байланыш үчүн маалыматтарды ушул тиркемеден таба аласыз.",
+
+  "hiv_prevention2_car1_text1":"Программага катышуу ыктыярдуу – сиздин каалооңуз гана талап кылынат",
+  "hiv_prevention2_car1_text2":"Метадон медициналык уюмдарда, ошондой эле абактарда акысыз берилет",
+  "hiv_prevention2_car1_text3":"Метадонду ичүү зыяндуу таасирден арылууга мүмкүндүк берет - башкача айтканда, адамдын ден соолугу калыбына келе баштайт.",
+  "hiv_prevention2_car1_text4":"Метадонду оозго салып ичиш керек, мындай ыкма вирустук гепатитти жана ВИЧ инфекциясын жуктуруп алуудан коргонууга жардам берет",
+  "hiv_prevention2_car1_text5":"ВИЧке чалдыккан адам үчүн программага катышуу маанилүү. Ал ВИЧ-инфекциясынан дарылоого жардам берет",
+  "hiv_prevention2_car1_text6":"Метадон менен колдоо программасына катышуу үй-бүлөдө ынтымакты калыбына келтирип, туугандар менен жакшы мамилени сактоого жардам берет",
+  "hiv_prevention2_car1_text7":"Метадон менен колдоо программасына катышуу мыйзамсыз аракеттерден сактайт, себеби адам баңгизаттарды сатып алуудан, сактоодон жана колдонуудан баш тартат.",
+
+  "hiv_prevention2text1":"Метадон менен колдоо терапиясы \n(МКП)\n",
+  "hiv_prevention2text2":"МКПнын артыкчылыктары:",
+  "hiv_prevention2text3":"КИЙИНКИ",
+  "hiv_prevention2text4":"МКП программасынын чектөөлөрү",
+  "hiv_prevention2text5":"Метадон менен дарылоо опиоиддерди (героин, апийим, морфин ж.б.) колдонгон адамдарга гана дайындалат. МКП башка баңгизаттарды колдонуучуларга таасирин тийгизбейт.",
+  "hiv_prevention2text6":"Программага катышуу үчүн саламаттыкты сактоо уюмунда каттоого туруш керек. Каттоо фактысы купуя мүнөзгө ээ жана үчүнчү жактарга айтылбайт. Кардарларды анонимдүү (каттоого тургузбастан) эсепке алуу күтүлүүдө",
+  "hiv_prevention2text7":"Күн сайын метадон берген пунктка барып туруш керек. Учурда терапияны үзгүлтүккө учуратпай карманган кардарларга метадон беш күнгө санап берилет.",
+  "hiv_prevention2text8":"Метадон баңгиликтен айыктырбайт, ошондуктан аны көп жылдар бою тынымсыз ичип туруш керек.",
+  "hiv_prevention2text9":"МТП программасы жөнүндө толук маалыматты бейөкмөт уюмдардан, СПИД борборлорунан жана наркология борборлорунан алса болот, кызматкерлер сизге МТПны баштоого жардам беришет."
+
 }
