--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -1173,10 +1173,72 @@
   "hiv_info2text22":"Были ли у Вас или Вашего полового партнера язвы на половых органах, необычные выделения из половых органов, боли внизу живота, либо проходили ли Вы лечение инфекций, которые передаются половым путем (сифилис, гонорея, трихомониаз)?",
   "hiv_info2text23":"Принимали ли вы когда-либо наркотики путем инъекций, хотя бы раз?",
   "hiv_info2text24":"Принимали ли Вы наркотики совместно с Вашим партнером /партнерами?",
-  "hiv_info2text25":"Болели ли Вы гепатитом?"
+  "hiv_info2text25":"Болели ли Вы гепатитом?",
 
 
+  "hiv_prevention1text1": "Как предотвратить заражение ВИЧ?",
+  "hiv_prevention1text2": "Предупредить заражение ВИЧ легче, чем лечить. Соблюдение мер профилактики защитит Вас от заражения вирусными гепатитами или инфекциями, которые передаются половым путем (ИППП). Инфицирование ИППП увеличивает риск заражения ВИЧ половым путем. \n\nПоскольку ВИЧ передается только тремя путями – можно защитить себя от заражения используя следующие правила.\n",
+  "hiv_prevention1text3": "Профилактика полового пути \nпередачи ВИЧ строится на стратегии четыре В:",
+  "hiv_prevention1text4": "ЛИСТАЙ",
+  "hiv_prevention1text5": "Профилактика инъекционного пути передачи ВИЧ",
+  "hiv_prevention1text6": "Профилактика передачи ВИЧ от ВИЧ-позитивной матери ребенку",
+  "hiv_prevention1text7": "Даже, если человек живет с ВИЧ, ему нужно соблюдать меры профилактики",
+  "hiv_prevention1text8": " для предупреждения передачи ВИЧ другим людям. Это защитит самого человека с ВИЧ от заражения вирусными гепатитами, ИППП, а также от повторного заражения другим измененным вирусом иммунодефицита человека. ",
+  "hiv_prevention1text9": "Повторное заражение, а также заражение другими инфекциями ухудшит его состояние здоровья.",
+  "hiv_prevention1text10":"Для предупреждения ВИЧ-инфекции можно также проводить профилактическое лечение до контакта –называется доконтактная профилактика (ДКП), а также после опасного \nконтакта  –  постконтактая профилактика (ПКП).",
+  "hiv_prevention_car1_text1":"Воздержание: Отказ от сексуальных контактов",
+  "hiv_prevention_car1_text2":"Верность одному неинфицированному \nВИЧ половому партнеру\n,Это означает отказ от случайных половых контактов, химсекса, и иных форм опасного сексуального поведения. Насильственный секс усиливает риск инфицирования ВИЧ",
+  "hiv_prevention_car1_text3":"Всегда использовать презерватив и смазки на водной основе (лубриканты) при половых контактах",
+  "hiv_prevention_car1_text4":"Выявление и лечение ИППП совместно с половым партнером",
+  "hiv_prevention_car2_text1":"Отказ от употребления наркотиков",
+  "hiv_prevention_car2_text2":"Если Вы употребляете наркотики, то снижайте риск: \n \nпользуйтесь только своим чистым шприцем; не набирайте наркотик из общей посуды; от инъекционного потребления – переходите на неинъекционные пути потребления (курение, прием через рот) или примите участие в программе поддерживающей терапии метадоном. ",
+  "hiv_prevention_car2_text3":"Не проводите медицинские манипуляции у случайных людей вне медицинского учреждения",
+  "hiv_prevention_car2_text4":"При проведении процедур, связанных с повреждением кожи (иглоукалывание; татуировки, пирсинг), следите, чтобы использовалось стерильное оборудование",
+  "hiv_prevention_car3_text1":"Пройдите вместе с половым партнером тест на ВИЧ при планировании или на ранней стадии беременности",
+  "hiv_prevention_car3_text2":"Если у Вас ВИЧ, строго соблюдайте назначения по лечению ВИЧ-инфекции (АРТ), которое предупредит передачу ВИЧ ребенку",
+  "hiv_prevention_car3_text3":"Проведите обследование на ВИЧ новорожденного ребенка и его лечение против ВИЧ сразу после родов",
+  "hiv_prevention_car3_text4":"Наблюдайтесь у врача и следуйте рекомендациям о родах и кормлении ребенка",
 
+  "hiv_prevention3_car1_text1": "ДКП назначается врачом с учетом состояния здоровья, отрицательного ВИЧ-статуса",
+  "hiv_prevention3_car1_text2": "Назначение требует Вашей регистрации в центре СПИД и наблюдения",
+  "hiv_prevention3_car1_text3": "Лекарства для ДКП выдаются бесплатно в центрах СПИД",
+  "hiv_prevention3_car1_text4": "В Кыргызстане получить ДКП можно при поддержке НПО",
+  "hiv_prevention3_car1_text5": "При получении ДКП человек регулярно наблюдается в центре СПИД",
+  "hiv_prevention3text1":"Доконтактная и постконтактая профилактика ВИЧ-инфекции",
+  "hiv_prevention3text2":"Доконтактная профилактика (ДКП)\n\n",
+  "hiv_prevention3text3":"Это прием антиретровирусных препаратов для предотвращения инфицирования ВИЧ людям с отрицательным ВИЧ-статусом. Доконтактная профилактика рекомендуется в случаях, если Вы имеете постоянного полового партнера, инфицированного ВИЧ, который не принимает либо часто нарушает прием препаратов. Доконтактная профилактика также рекомендуется людям, которые практикуют опасное поведение.",
+  "hiv_prevention3text4":"\n\nРекомендации по доконтактной профилактике: \n\n",
+  "hiv_prevention3text5":"Следует получить полную информацию о ДКП в Центре СПИД или в НПО. Существует два способа приема ДКП. \n\\n",
+  "hiv_prevention3text6":"Ежедневный (постоянный) прием ДКП ",
+  "hiv_prevention3text7":"нужно осуществлять очень аккуратно, ежедневно в установленное время весь период, когда существует риск. При таком приеме эффект достигается в течение 4-7 дней после начала ДКП.\n\n",
+  "hiv_prevention3text8":"Если у Вас бывают редкие опасные контакты, рекомендуется ",
+  "hiv_prevention3text9":"ситуативный прием ДКП",
+  "hiv_prevention3text10":" – когда препараты принимают в течение 3 дней до и 3 дней после контакта. Такой прием рекомендуется при редких ситуациях опасного поведения.",
+  "hiv_prevention3text11":"Следует помнить:",
+  "hiv_prevention3text12":"ЛИСТАЙ",
+  "hiv_prevention3text13":"Постконтактная профилактика (ПКП) ",
+  "hiv_prevention3text14":"– это профилактический прием антиретровирусных препаратов для предотвращения заражения ВИЧ-инфекцией после возможного контакта с вирусом (при половом контакте, совместном употреблении наркотиков или в других случаях). После оценки риска, проведения тестирования на ВИЧ, назначается ПКП.Она может быть назначена в Центре СПИД, на станции скорой медицинской помощи или в других организациях здравоохранения.",
+  "hiv_prevention3text15":"ВАЖНО ПОМНИТЬ:\n",
+  "hiv_prevention3text16":"\nНачинать ПКП нужно как можно скорее после опасного контакта, но не позднее 72 часов (3 суток) после него. Препараты назначает врач. Их принимают в течение месяца ежедневно строго по назначению врача. После этого человек находится под наблюдением в течение 6 месяцев (проходит тест на ВИЧ через 1, 3 и 6 месяцев). Следует также помнить, что ДКП и ПКП не защищают от беременности и ИППП. Поэтому нужно параллельно использовать средства защиты (презервативы, лубриканты) и контрацептивы.",
+  "hiv_prevention3text17":"Более подробную информацию можно получить в центрах СПИД или в неправительственных организациях.Контактная информация находится в этом приложении",
+
+  "hiv_prevention2_car1_text1":"Участие в программе добровольно - только по Вашему желанию",
+  "hiv_prevention2_car1_text2":"Метадон можно получить бесплатно в медицинских организациях, а также в тюрьмах",
+  "hiv_prevention2_car1_text3":"Прием метадона позволят избавиться от вредного действия - то есть у человека восстанавливается здоровье",
+  "hiv_prevention2_car1_text4":"Метадон принимают через рот (пьют), что помогает защитить себя от заражения вирусными гепатитами и ВИЧ",
+  "hiv_prevention2_car1_text5":"Участие в программе важно для человека, живущего с ВИЧ. Оно помогает лечению ВИЧ-инфекции",
+  "hiv_prevention2_car1_text6":"Участие в ПТМ помогает восстановить семью и добрые отношения с родственниками",
+  "hiv_prevention2_car1_text7":"Участие в программе ПТМ позволяет избежать проблем с милицией, так как приводит к отказу от приобретения, хранения и потребления незаконных наркотиков",
+
+  "hiv_prevention2text1":"Поддерживающая терапия метадоном \n(ПТМ)\n",
+  "hiv_prevention2text2":"Преимущества приема ПТМ:",
+  "hiv_prevention2text3":"ЛИСТАЙ",
+  "hiv_prevention2text4":"Ограничения программы ПТМ",
+  "hiv_prevention2text5":"Лечение метадоном назначается только людям, которые потребляют опиоиды (героин, опий, морфин и др.). ПТМ не действует на потребителей других наркотиков.",
+  "hiv_prevention2text6":"Для участия в программе нужно зарегистрироваться в организации здравоохранения. Факт регистрации носит конфиденциальный характер и не разглашается третьим лицам. Ожидается введение анонимного учета клиентов (без регистрации).",
+  "hiv_prevention2text7":"Нужно ежедневно посещать пункт выдачи метадона. В настоящее время клиентам, которые аккуратно принимают терапию выдают метадон на 5 дней.",
+  "hiv_prevention2text8":"Метадон не излечивает зависимость от наркотиков, поэтому его принимают постоянно в течение многих лет.",
+  "hiv_prevention2text9":" Подробную информацию о программе ПТМ можно получить в НПО, центрах СПИД и центрах наркологии, сотрудники которых помогут Вам начать ПТМ."
 
 }
 
